SUMMARY *** Plasma/Kwin loads, but after first app loads (panel or any other app), Cannot load any other apps, eventually we get a lock. I tested this before it was merged with no issues, after merge this happens. Reverting those commits, all goes back to working. Version ======= KWin version: 5.24.80 Qt Version: 5.15.2 Qt compile version: 5.15.2 XCB compile version: 1.14 Operation Mode: Xwayland Build Options ============= KWIN_BUILD_DECORATIONS: yes KWIN_BUILD_TABBOX: yes KWIN_BUILD_ACTIVITIES: yes HAVE_X11_XCB: yes HAVE_EPOXY_GLX: yes HAVE_WAYLAND_EGL: yes X11 === Vendor: SUSE LINUX Vendor Release: 12201001 Protocol Version/Revision: 11/0 SHAPE: yes; Version: 0x11 RANDR: yes; Version: 0x14 DAMAGE: yes; Version: 0x11 Composite: yes; Version: 0x4 RENDER: yes; Version: 0xb XFIXES: yes; Version: 0x50 SYNC: yes; Version: 0x31 GLX: yes; Version: 0x0 Decoration ========== Plugin: org.kde.kwin.aurorae Theme: __aurorae__svg__Gently-Blur Plugin recommends border size: No onAllDesktopsAvailable: true alphaChannelSupported: true closeOnDoubleClickOnMenu: false decorationButtonsLeft: 0 decorationButtonsRight: 3, 4, 5 borderSize: 3 gridUnit: 16 font: Comfortaa,15,-1,5,50,0,0,0,0,0 smallSpacing: 4 largeSpacing: 16 Platform ========== Name: DRM Active: true Atomic Mode Setting on GPU 0: true Cursor ====== themeName: breeze_cursors themeSize: 36 Options ======= focusPolicy: 0 xwaylandCrashPolicy: xwaylandMaxCrashCount: 3 nextFocusPrefersMouse: false clickRaise: true autoRaise: false autoRaiseInterval: 0 delayFocusInterval: 0 shadeHover: false shadeHoverInterval: 250 separateScreenFocus: false activeMouseScreen: true placement: 6 focusPolicyIsReasonable: true borderSnapZone: 10 windowSnapZone: 10 centerSnapZone: 0 snapOnlyWhenOverlapping: false rollOverDesktops: true focusStealingPreventionLevel: 3 operationTitlebarDblClick: 5000 operationMaxButtonLeftClick: 5000 operationMaxButtonMiddleClick: 5015 operationMaxButtonRightClick: 5014 commandActiveTitlebar1: 0 commandActiveTitlebar2: 20 commandActiveTitlebar3: 2 commandInactiveTitlebar1: 4 commandInactiveTitlebar2: 20 commandInactiveTitlebar3: 2 commandWindow1: 7 commandWindow2: 8 commandWindow3: 8 commandWindowWheel: 28 commandAll1: 10 commandAll2: 3 commandAll3: 14 keyCmdAllModKey: 16777251 condensedTitle: false electricBorderMaximize: true electricBorderTiling: true electricBorderCornerRatio: 0.25 borderlessMaximizedWindows: true killPingTimeout: 5000 hideUtilityWindowsForInactive: true compositingMode: 1 useCompositing: true hiddenPreviews: 1 glSmoothScale: 1 glStrictBinding: false glStrictBindingFollowsDriver: true glPreferBufferSwap: 101 glPlatformInterface: 2 windowsBlockCompositing: true latencyPolicy: renderTimeEstimator: Screen Edges ============ desktopSwitching: false desktopSwitchingMovingClients: false cursorPushBackDistance: 1x1 timeThreshold: 150 reActivateThreshold: 350 actionTopLeft: 0 actionTop: 0 actionTopRight: 0 actionRight: 0 actionBottomRight: 0 actionBottom: 0 actionBottomLeft: 0 actionLeft: 0 Screens ======= Multi-Head: no Active screen follows mouse: yes Number of Screens: 1 Screen 0: --------- Name: DP-1 Geometry: 0,0,3840x2160 Scale: 1 Refresh Rate: 60000 Adaptive Sync: incapable Compositing =========== Compositing is active Compositing Type: OpenGL OpenGL vendor string: AMD OpenGL renderer string: AMD Radeon RX 460 Graphics (polaris11, LLVM 14.0.0, DRM 3.46, 5.18.0-rc5-2.g1b401d7-default) OpenGL version string: 4.6 (Core Profile) Mesa 22.0.2 OpenGL platform interface: EGL OpenGL shading language version string: 4.60 Driver: Unknown GPU class: Unknown OpenGL version: 4.6 GLSL version: 4.60 Mesa version: 22.0.2 Linux kernel version: 5.18 Direct rendering: Requires strict binding: no GLSL shaders: yes Texture NPOT support: yes Virtual Machine: no OpenGL 2 Shaders are used
Created attachment 148609 [details] dmesg.log
Created attachment 148610 [details] kwin debug log
Not exactly sure how to get a usable backtrace in this case, After boot, I log in from multi-user.target then run startplasma-wayland.
does coredumpctl have anything?
`coredumpctl` might have logged the crash.
Naw, just a dump for my browser (Brave) trying to load in that scenario and crashing.
Git commit ad45deaf809934b5e11df432f8e5fb06f09f306a by Aleix Pol Gonzalez, on behalf of Vlad Zahorodnii. Committed on 06/05/2022 at 17:24. Pushed by ngraham into branch 'master'. backends/drm: Add missing file descriptor initializer We need to initialize file descriptors to -1 explicitly. M +1 -0 src/backends/drm/drm_buffer.cpp https://invent.kde.org/plasma/kwin/commit/ad45deaf809934b5e11df432f8e5fb06f09f306a