backends/drm: Add missing file descriptor initializer

We need to initialize file descriptors to -1 explicitly.

BUG: 453470